fix: 자동차 이름 파싱 수정
사용자가 입력한 문자열에서 자동차 이름을 얻을 때 trim 을 적용합니다.