@@ -2,12 +2,15 @@ package racingcar.utility;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CarNameParser {
 
     public static final String NAME_DELIMITER = ",";
 
     public static List<String> parseCarNames(String carNamesAsString) {
-        return Arrays.stream(carNamesAsString.split(NAME_DELIMITER)).toList();
+        return Arrays.stream(carNamesAsString.split(NAME_DELIMITER))
+                .map(String::trim)
+                .collect(Collectors.toList());
     }
 }
